--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,99 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.orangecoastcollege.cs273.tipcalculator.MainActivity">
+    tools:context="edu.orangecoastcollege.cs273.tipcalculator.MainActivity"
+    android:id="@+id/tipCalculatorGridLayout"
+    android:useDefaultMargins="true"
+    android:columnCount="2">
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/amountEditText"
+        android:layout_columnSpan="2"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_gravity="fill_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/amountTextView"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_columnSpan="2"
+        android:hint="@string/amount_hint"
+        android:layout_gravity="fill_horizontal"
+        android:background="@color/amount_text_background"
+        android:padding="12dp"
+        android:elevation="4dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/default_percent"
+        android:id="@+id/percentTextView"
+        android:layout_column="0" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/percentSeekBar"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_gravity="fill_horizontal"
+        android:max="50"
+        android:progress="15"
+        android:indeterminate="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/tip_text"
+        android:id="@+id/tipTextView"
+        android:layout_column="0"
+        android:layout_columnSpan="1"
+        android:layout_row="2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/tipAmountTextView"
+        android:layout_column="1"
+        android:background="#ffe0b2"
+        android:layout_columnSpan="1"
+        android:layout_gravity="fill_horizontal"
+        android:padding="12dp"
+        android:elevation="4dp"
+        android:layout_row="2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/total_text"
+        android:id="@+id/totalTextView"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_columnSpan="1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/totalAmountTextView"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_row="3"
+        android:background="@color/nonedit_text_background"
+        android:padding="12dp"
+        android:layout_gravity="fill_horizontal"
+        android:elevation="4dp" />
+
+</GridLayout>
